# score2dx

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  changelog.md
doc/: database.md  pyinstaller.md
script/: example_config.txt  ist_scraper.py  migrate_db_4.0.0.py  sort_version_musics.py
src/: CMakeLists.txt
src/app/: experiment.cpp  iidxme.cpp  interactive.cpp  regression.cpp  upgrade_database.cpp
src/cmake/: score2dx-config.cmake.in
src/score2dx/: CMakeLists.txt  version.hpp
src/score2dx/Analysis/: Analyzer.cpp  Analyzer.hpp  BestScoreData.cpp  BestScoreData.hpp  CMakeLists.txt  CareerRecord.cpp  CareerRecord.hpp  CareerRecordTest.cpp  ChartScoreRecord.cpp  ChartScoreRecord.hpp
src/score2dx/Core/: ActiveVersion.cpp  ActiveVersion.hpp  CMakeLists.txt  CheckedParse.hxx  ChromeDriver.cpp  ChromeDriver.hpp  Core.cpp  Core.hpp  JsonDefinition.hpp  MusicDatabase.cpp  MusicDatabase.hpp  MusicDatabaseTest.cpp  MusicInfo.cpp  MusicInfo.hpp  ScopeProfiler.hxx
src/score2dx/Csv/: CMakeLists.txt  Csv.cpp  Csv.hpp  CsvColumn.cpp  CsvColumn.hpp  CsvTest.cpp
src/score2dx/Iidx/: CMakeLists.txt  ChartInfo.cpp  ChartInfo.hpp  Definition.cpp  Definition.hpp  DefinitionTest.cpp  Music.cpp  Music.hpp  MusicInfo.cpp  MusicInfo.hpp  MusicTest.cpp  Version.cpp  Version.hpp  VersionDateTimeRange.cpp  VersionDateTimeRange.hpp  VersionTest.cpp
src/score2dx/Score/: AllVersionScoreTable.cpp  AllVersionScoreTable.hpp  AllVersionScoreTableTest.cpp  CMakeLists.txt  ChartScore.cpp  ChartScore.hpp  MusicScore.cpp  MusicScore.hpp  PlayerScore.cpp  PlayerScore.hpp  ScoreLevel.cpp  ScoreLevel.hpp  ScoreLevelTest.cpp  ScoreSource.hpp  VersionScoreTable.cpp  VersionScoreTable.hpp  VersionScoreTableTest.cpp  VersionScoreTimeline.cpp  VersionScoreTimeline.hpp
src/score2dx/Type/: CMakeLists.txt  IsDuration.hxx
table/: MusicDatabase28_20211006.json  MusicDatabase29_2021-10-18.json  MusicDatabase29_2021-10-19.json  MusicDatabase29_2021-11-08.json  MusicDatabase29_2021-11-09.json  MusicDatabase29_2021-11-12.json  MusicDatabase29_2021-11-27.json  MusicDatabase29_2021-12-02.json  MusicDatabase29_2021-12-20.json  MusicDatabase29_2021-12-26.json  MusicDatabase29_2022-02-20.json  MusicDatabase29_2022-03-06.json  MusicDatabase29_2022-03-25.json  MusicDatabase29_2022-05-26.json  MusicDatabase29_2022-06-08.json  MusicDatabase29_2022-07-16.json  MusicDatabase29_2022-08-31.json  MusicDatabase29_2022-10-19.json  MusicDatabase29_2022-11-29.json  MusicDatabase30_2022-12-09.json  MusicDatabase30_2022-12-11.json  MusicDatabase30_2023-02-10.json  MusicDatabase30_2023-03-03.json  MusicDatabase30_2023-04-21.json  MusicDatabase30_2023-06-20.json  MusicDatabase30_2023-07-03.json  MusicDatabase30_2023-07-15.json  MusicDatabase30_2023-08-24.json  MusicDatabase30_2023-09-10.json  MusicDatabase30_2023-09-24.json  MusicDatabase30_2023-10-19.json  MusicDatabase31_2023-10-30.json  MusicDatabase31_2023-10-31.json  MusicDatabase31_2023-11-03.json  MusicDatabase31_2023-11-04.json  MusicDatabase31_2023-12-22.json  MusicDatabase31_2024-03-20.json  MusicDatabase31_2024-07-04.json  MusicDatabase31_2024-07-09.json  MusicDatabase31_2024-10-02.json  (+1 more)
